@@ -1302,31 +1302,30 @@
 		$filter_application		= $_REQUEST['filter_application'];
 		$filter_description		= $_REQUEST['filter_description'];
 		$filter_type			= $_REQUEST['filter_type'];
-		$filter_key				= $_REQUEST['filter_key'];
+		$filter_key			= $_REQUEST['filter_key'];
 		$filter_snmp_community		= $_REQUEST['filter_snmp_community'];
-		$filter_snmp_oid			= $_REQUEST['filter_snmp_oid'];
-		$filter_snmp_port			= $_REQUEST['filter_snmp_port'];
+		$filter_snmp_oid		= $_REQUEST['filter_snmp_oid'];
+		$filter_snmp_port		= $_REQUEST['filter_snmp_port'];
 		$filter_value_type		= $_REQUEST['filter_value_type'];
-		$filter_data_type = $_REQUEST['filter_data_type'];
+		$filter_data_type		= $_REQUEST['filter_data_type'];
 		$filter_delay			= $_REQUEST['filter_delay'];
 		$filter_history			= $_REQUEST['filter_history'];
 		$filter_trends			= $_REQUEST['filter_trends'];
 		$filter_status			= $_REQUEST['filter_status'];
-		$filter_templated_items			= $_REQUEST['filter_templated_items'];
-		$filter_with_triggers			= $_REQUEST['filter_with_triggers'];
-		$filter_ipmi_sensor			= $_REQUEST['filter_ipmi_sensor'];
+		$filter_templated_items		= $_REQUEST['filter_templated_items'];
+		$filter_with_triggers		= $_REQUEST['filter_with_triggers'];
 
 // subfilter
-		$subfilter_hosts = $_REQUEST['subfilter_hosts'];
-		$subfilter_apps = $_REQUEST['subfilter_apps'];
-		$subfilter_types = $_REQUEST['subfilter_types'];
-		$subfilter_value_types = $_REQUEST['subfilter_value_types'];
-		$subfilter_status = $_REQUEST['subfilter_status'];
-		$subfilter_templated_items = $_REQUEST['subfilter_templated_items'];
-		$subfilter_with_triggers = $_REQUEST['subfilter_with_triggers'];
-		$subfilter_history = $_REQUEST['subfilter_history'];
-		$subfilter_trends = $_REQUEST['subfilter_trends'];
-		$subfilter_interval = $_REQUEST['subfilter_interval'];
+		$subfilter_hosts		= $_REQUEST['subfilter_hosts'];
+		$subfilter_apps			= $_REQUEST['subfilter_apps'];
+		$subfilter_types		= $_REQUEST['subfilter_types'];
+		$subfilter_value_types		= $_REQUEST['subfilter_value_types'];
+		$subfilter_status		= $_REQUEST['subfilter_status'];
+		$subfilter_templated_items	= $_REQUEST['subfilter_templated_items'];
+		$subfilter_with_triggers	= $_REQUEST['subfilter_with_triggers'];
+		$subfilter_history		= $_REQUEST['subfilter_history'];
+		$subfilter_trends		= $_REQUEST['subfilter_trends'];
+		$subfilter_interval		= $_REQUEST['subfilter_interval'];
 
 		$form = new CForm();
 		$form->setAttribute('name','zbx_filter');
@@ -1334,16 +1333,16 @@
 		$form->setMethod('get');
 		$form->addVar('filter_hostid',get_request('filter_hostid',get_request('hostid')));
 
-		$form->addVar('subfilter_hosts', $subfilter_hosts);
-		$form->addVar('subfilter_apps', $subfilter_apps);
-		$form->addVar('subfilter_types', $subfilter_types);
-		$form->addVar('subfilter_value_types', $subfilter_value_types);
-		$form->addVar('subfilter_status', $subfilter_status);
-		$form->addVar('subfilter_templated_items', $subfilter_templated_items);
-		$form->addVar('subfilter_with_triggers', $subfilter_with_triggers);
-		$form->addVar('subfilter_history', $subfilter_history);
-		$form->addVar('subfilter_trends', $subfilter_trends);
-		$form->addVar('subfilter_interval', $subfilter_interval);
+		$form->addVar('subfilter_hosts',		$subfilter_hosts);
+		$form->addVar('subfilter_apps',			$subfilter_apps);
+		$form->addVar('subfilter_types',		$subfilter_types);
+		$form->addVar('subfilter_value_types',		$subfilter_value_types);
+		$form->addVar('subfilter_status',		$subfilter_status);
+		$form->addVar('subfilter_templated_items',	$subfilter_templated_items);
+		$form->addVar('subfilter_with_triggers',	$subfilter_with_triggers);
+		$form->addVar('subfilter_history',		$subfilter_history);
+		$form->addVar('subfilter_trends',		$subfilter_trends);
+		$form->addVar('subfilter_interval',		$subfilter_interval);
 
 // FORM FOR FILTER DISPLAY {
 		$table = new CTable();
@@ -1369,79 +1368,144 @@
 					new CButton('btn_app', S_SELECT, 'return PopUp("popup.php?dstfrm='.$form->GetName().
 						'&dstfld1=filter_application&srctbl=applications&srcfld1=name",400,300,"application");', 'A'))
 		));
-		$col_table1->addRow(array(array(bold(S_DESCRIPTION),SPACE.S_LIKE_SMALL),
+		$col_table1->addRow(array(array(bold(S_DESCRIPTION),SPACE.S_LIKE_SMALL.': '),
 			new CTextBox("filter_description", $filter_description, 30)));
-		$col_table1->addRow(array(array(bold(S_KEY),SPACE.S_LIKE_SMALL),
+		$col_table1->addRow(array(array(bold(S_KEY),SPACE.S_LIKE_SMALL.': '),
 			new CTextBox("filter_key", $filter_key, 30)));
 
 // 2nd col
 		$col_table2 = new CTable();
 		$col_table2->setClass('filter');
-
-		$cmbType = new CComboBox("filter_type", $filter_type, "javascript: create_var('zbx_filter', 'filter_set', '1', true); ");
+		$fTypeVisibility = array();
+		
+	//first row
+		$cmbType = new CComboBox("filter_type", $filter_type); //"javascript: create_var('zbx_filter', 'filter_set', '1', true); ");
+		$cmbType->setAttribute('id', 'filter_type');
 		$cmbType->addItem(-1, S_ALL_SMALL);
-		foreach(array(ITEM_TYPE_ZABBIX, ITEM_TYPE_ZABBIX_ACTIVE, ITEM_TYPE_SIMPLE,
-			ITEM_TYPE_SNMPV1, ITEM_TYPE_SNMPV2C, ITEM_TYPE_SNMPV3, ITEM_TYPE_TRAPPER,
-			ITEM_TYPE_INTERNAL, ITEM_TYPE_AGGREGATE, ITEM_TYPE_HTTPTEST,
-			ITEM_TYPE_DB_MONITOR, ITEM_TYPE_IPMI, ITEM_TYPE_SSH, ITEM_TYPE_TELNET,
-			ITEM_TYPE_CALCULATED) as $it){
-				$cmbType->addItem($it, item_type2str($it));
-		}
-		$col_table2->addRow(array(bold(S_TYPE.': '), $cmbType));
+		foreach(array('filter_delay_label','filter_delay') as $vItem)
+			zbx_add2subarray($fTypeVisibility, -1, $vItem);
+		foreach(array(
+			ITEM_TYPE_ZABBIX,
+			ITEM_TYPE_ZABBIX_ACTIVE,
+			ITEM_TYPE_SIMPLE,
+			ITEM_TYPE_SNMPV1,
+			ITEM_TYPE_SNMPV2C,
+			ITEM_TYPE_SNMPV3,
+			ITEM_TYPE_TRAPPER,
+			ITEM_TYPE_INTERNAL,
+			ITEM_TYPE_AGGREGATE,
+			//ITEM_TYPE_HTTPTEST,
+			ITEM_TYPE_EXTERNAL,
+			ITEM_TYPE_DB_MONITOR,
+			ITEM_TYPE_IPMI,
+			ITEM_TYPE_SSH,
+			ITEM_TYPE_TELNET,
+			ITEM_TYPE_CALCULATED) as $it) {
 
-		if(($filter_type != ITEM_TYPE_TRAPPER) && ($filter_type != ITEM_TYPE_HTTPTEST)){
-			$col_table2->addRow(array(bold(S_UPDATE_INTERVAL_IN_SEC),
-				new CNumericBox('filter_delay', $filter_delay, 5, null, true)));
-		}
-		else{
-			$col_table2->addRow(SPACE, SPACE);
+			$cmbType->addItem($it, item_type2str($it));
+			
+			if(!uint_in_array($it, array(ITEM_TYPE_TRAPPER, ITEM_TYPE_HTTPTEST))){
+				foreach(array('filter_delay_label','filter_delay') as $vItem)
+					zbx_add2subarray($fTypeVisibility, $it, $vItem);
+				
+				unset($vItem);
+			}
+			
+			if(uint_in_array($it, array(ITEM_TYPE_SNMPV1,ITEM_TYPE_SNMPV2C,ITEM_TYPE_SNMPV3))){
+				foreach(array(
+					'filter_snmp_community_label', 'filter_snmp_community',
+					'filter_snmp_oid_label', 'filter_snmp_oid',
+					'filter_snmp_port_label', 'filter_snmp_port'
+					) as $vItem)
+					zbx_add2subarray($fTypeVisibility, $it, $vItem);
+				unset($vItem);
+			}
 		}
 		
-		if(uint_in_array($filter_type, array(ITEM_TYPE_SNMPV1,ITEM_TYPE_SNMPV2C,ITEM_TYPE_SNMPV3))){
-			$col_table2->addRow(array(array(bold(S_SNMP_COMMUNITY),SPACE.S_LIKE_SMALL),
-				new CTextBox("filter_snmp_community", $filter_snmp_community, 16)));
-			$col_table2->addRow(array(array(bold(S_SNMP_OID),SPACE.S_LIKE_SMALL),
-				new CTextBox("filter_snmp_oid", $filter_snmp_oid, 40)));
-			$col_table2->addRow(array(array(bold(S_SNMP_PORT),SPACE.S_LIKE_SMALL),
-				new CNumericBox("filter_snmp_port", $filter_snmp_port, 5 ,null, true)));
-		}
-		else if($filter_type == ITEM_TYPE_IPMI){
-			$col_table2->addRow(array(bold(S_IPMI_SENSOR), new CTextBox('filter_ipmi_sensor', $filter_ipmi_sensor, 32)));
-			$col_table2->addRow(array(SPACE,SPACE));
-			$col_table2->addRow(array(SPACE,SPACE));
-		}
-		else{
-			$col_table2->addRow(array(SPACE,SPACE));
-			$col_table2->addRow(array(SPACE,SPACE));
-			$col_table2->addRow(array(SPACE,SPACE));
-		}
+		$json = new CJSON();
 
+		zbx_add_post_js("var filterTypeSwitcher = new CViewSwitcher('filter_type', new Array('keyup','click','change'), ".$json->encode($fTypeVisibility).");");
+		$col21 = new CCol(bold(S_TYPE.': '));
+		$col21->setAttribute('style', 'width: 160px');
+		
+		$col_table2->addRow(array($col21, $cmbType));
+	//second row
+		$label221 = new CSpan(bold(S_UPDATE_INTERVAL_IN_SEC.': '), 'hidden');
+		$label221->setAttribute('id', 'filter_delay_label');
+
+		$field221 = new CNumericBox('filter_delay', $filter_delay, 5, null, true);
+		$field221->setAttribute('id', 'filter_delay');
+		$field221->setClass('biginput hidden');
+		$field221->setEnabled('no');
+		
+		$col_table2->addRow(array(array($label221, SPACE), array($field221, SPACE)));
+	//third row
+		$label231 = new CSpan(array(bold(S_SNMP_COMMUNITY), SPACE.S_LIKE_SMALL.': '), 'hidden');
+		$label231->setAttribute('id', 'filter_snmp_community_label');
+
+		$field231 = new CTextBox('filter_snmp_community', $filter_snmp_community, 16);
+		$field231->setAttribute('id', 'filter_snmp_community');
+		$field231->setClass('biginput hidden');
+		$field231->setEnabled('no');
+
+		$col_table2->addRow(array(array($label231, SPACE), array($field231, SPACE)));
+	//fourth row
+		$label241 = new CSpan(array(bold(S_SNMP_OID), SPACE.S_LIKE_SMALL.': '), 'hidden');
+		$label241->setAttribute('id', 'filter_snmp_oid_label');
+
+		$field241 = new CTextBox('filter_snmp_oid', $filter_snmp_oid, 40);
+		$field241->setAttribute('id', 'filter_snmp_oid');
+		$field241->setClass('biginput hidden');
+		$field241->setEnabled('no');
+
+		$col_table2->addRow(array(array($label241, SPACE), array($field241, SPACE)));
+	//fifth row
+		$label251 = new CSpan(array(bold(S_SNMP_OID), SPACE.S_LIKE_SMALL.': '), 'hidden');
+		$label251->setAttribute('id', 'filter_snmp_port_label');
+
+		$field251 = new CNumericBox('filter_snmp_port', $filter_snmp_port, 5 ,null, true);
+		$field251->setAttribute('id', 'filter_snmp_port');
+		$field251->setClass('biginput hidden');
+		$field251->setEnabled('no');
+
+		$col_table2->addRow(array(array($label251, SPACE), array($field251, SPACE)));
 // 3rd col
 		$col_table3 = new CTable();
 		$col_table3->setClass('filter');
-		$cmbValType = new CComboBox('filter_value_type', $filter_value_type, "javascript: create_var('zbx_filter', 'filter_set', '1', true);");
-			$cmbValType->addItem(-1, S_ALL_SMALL);
-			$cmbValType->addItem(ITEM_VALUE_TYPE_UINT64, S_NUMERIC_UNSIGNED);
-			$cmbValType->addItem(ITEM_VALUE_TYPE_FLOAT, S_NUMERIC_FLOAT);
-			$cmbValType->addItem(ITEM_VALUE_TYPE_STR, S_CHARACTER);
-			$cmbValType->addItem(ITEM_VALUE_TYPE_LOG, S_LOG);
-			$cmbValType->addItem(ITEM_VALUE_TYPE_TEXT, S_TEXT);
-			$col_table3->addRow(array(bold(S_TYPE_OF_INFORMATION.': '), $cmbValType));
+		$fVTypeVisibility = array();
 
-		if($filter_value_type == ITEM_VALUE_TYPE_UINT64){
-			$cmbDataType = new CComboBox('filter_data_type', $filter_data_type);
-			$cmbDataType->addItem(-1, S_ALL_SMALL);
-			$cmbDataType->addItem(ITEM_DATA_TYPE_DECIMAL, item_data_type2str(ITEM_DATA_TYPE_DECIMAL));
-			$cmbDataType->addItem(ITEM_DATA_TYPE_OCTAL, item_data_type2str(ITEM_DATA_TYPE_OCTAL));
-			$cmbDataType->addItem(ITEM_DATA_TYPE_HEXADECIMAL, item_data_type2str(ITEM_DATA_TYPE_HEXADECIMAL));
-			$col_table3->addRow(array(bold(S_DATA_TYPE.': '), $cmbDataType));
-		}
-		else{
-			$col_table3->addRow(array(SPACE,SPACE));
-		}
+		$cmbValType = new CComboBox('filter_value_type', $filter_value_type); //, "javascript: create_var('zbx_filter', 'filter_set', '1', true);");
+		$cmbValType->addItem(-1, S_ALL_SMALL);
+		$cmbValType->addItem(ITEM_VALUE_TYPE_UINT64, S_NUMERIC_UNSIGNED);
+		$cmbValType->addItem(ITEM_VALUE_TYPE_FLOAT, S_NUMERIC_FLOAT);
+		$cmbValType->addItem(ITEM_VALUE_TYPE_STR, S_CHARACTER);
+		$cmbValType->addItem(ITEM_VALUE_TYPE_LOG, S_LOG);
+		$cmbValType->addItem(ITEM_VALUE_TYPE_TEXT, S_TEXT);
+		
+		foreach(array('filter_data_type_label','filter_data_type') as $vItem)
+			zbx_add2subarray($fVTypeVisibility, ITEM_VALUE_TYPE_UINT64, $vItem);
+		
+		$col_table3->addRow(array(bold(S_TYPE_OF_INFORMATION.': '), $cmbValType));
+		
+		zbx_add_post_js("var filterValueTypeSwitcher = new CViewSwitcher('filter_value_type', new Array('keyup','click','change'), ".$json->encode($fVTypeVisibility).");");
+	//second row
+		$label321 = new CSpan(bold(S_DATA_TYPE.': '), 'hidden');
+		$label321->setAttribute('id', 'filter_data_type_label');
+
+		$field321 = new CComboBox('filter_data_type', $filter_data_type);//, 'submit()');
+		$field321->addItem(-1, S_ALL_SMALL);
+		$field321->addItem(ITEM_DATA_TYPE_DECIMAL, item_data_type2str(ITEM_DATA_TYPE_DECIMAL));
+		$field321->addItem(ITEM_DATA_TYPE_OCTAL, item_data_type2str(ITEM_DATA_TYPE_OCTAL));
+		$field321->addItem(ITEM_DATA_TYPE_HEXADECIMAL, item_data_type2str(ITEM_DATA_TYPE_HEXADECIMAL));
+		$field321->setAttribute('id', 'filter_data_type');
+		$field321->setClass('biginput hidden');
+		$field321->setEnabled('no');
+
+		$col_table3->addRow(array(array($label321, SPACE), array($field321, SPACE)));
+
 		$col_table3->addRow(array(bold(S_KEEP_HISTORY_IN_DAYS.': '), new CNumericBox('filter_history',$filter_history,8,null,true)));
-		$col_table3->addRow(array(bold(S_KEEP_TRENDS_IN_DAYS.': '), new CNumericBox('filter_trends',$filter_trends,8,null,true)));
 
+		$col_table3->addRow(array(bold(S_KEEP_TRENDS_IN_DAYS.': '), new CNumericBox('filter_trends',$filter_trends,8,null,true)));
 // 4th col
 		$col_table4 = new CTable();
 		$col_table4->setClass('filter');
@@ -1465,9 +1529,17 @@
 		$col_table4->addRow(array(bold(S_TRIGGERS.': '), $cmbWithTriggers));
 		$col_table4->addRow(array(bold(S_TEMPLATE.': '), $cmbBelongs));
 
-
-		$table->addRow(array(
-			new CCol($col_table1, 'top'), new CCol($col_table2, 'top'), new CCol($col_table3, 'top'), new CCol($col_table4, 'top')));
+//adding all cols tables to main table
+		$col1 = new CCol($col_table1, 'top');
+		$col1->setAttribute('style', 'width: 280px');
+		$col2 = new CCol($col_table2, 'top');
+		$col2->setAttribute('style', 'width: 390px');
+		$col3 = new CCol($col_table3, 'top');
+		$col3->setAttribute('style', 'width: 160px');
+		$col4 = new CCol($col_table4, 'top');
+		//$col4->setWidt;
+		
+		$table->addRow(array($col1, $col2, $col3, $col4));
 
 		$reset = new CSpan( S_RESET,'biglink');
 		$reset->onClick("javascript: clearAllForm('zbx_filter');");
@@ -2904,8 +2976,8 @@
 // end new dependency
 
 		$type_select = new CComboBox('type');
-		$type_select->additem(TRIGGER_MULT_EVENT_DISABLED,S_NORMAL,(($type == TRIGGER_MULT_EVENT_ENABLED)?'no':'yes'));
-		$type_select->additem(TRIGGER_MULT_EVENT_ENABLED,S_NORMAL.SPACE.'+'.SPACE.S_MULTIPLE_PROBLEM_EVENTS,(($type == TRIGGER_MULT_EVENT_ENABLED)?'yes':'no'));
+		$type_select->additem(TRIGGER_MULT_EVENT_DISABLED,S_NORMAL,(($type == TRIGGER_MULT_EVENT_ENABLED)? 'no':'yes'));
+		$type_select->additem(TRIGGER_MULT_EVENT_ENABLED,S_NORMAL.SPACE.'+'.SPACE.S_MULTIPLE_PROBLEM_EVENTS,(($type == TRIGGER_MULT_EVENT_ENABLED)? 'yes':'no'));
 
 		$frmTrig->addRow(S_EVENT_GENERATION,$type_select);
 
@@ -3752,13 +3824,13 @@
 
 // DAYSOFWEEK
 		$dayofweek = '';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_mo']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_tu']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_we']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_th']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_fr']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_sa']))?'0':'1';
-		$dayofweek .= (!isset($new_timeperiod['dayofweek_su']))?'0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_mo']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_tu']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_we']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_th']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_fr']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_sa']))? '0':'1';
+		$dayofweek .= (!isset($new_timeperiod['dayofweek_su']))? '0':'1';
 
 		if(isset($new_timeperiod['dayofweek'])){
 			$dayofweek = zbx_num2bitstr($new_timeperiod['dayofweek'],true);
@@ -3775,18 +3847,18 @@
 
 // MONTHS
 		$month = '';
-		$month .= (!isset($new_timeperiod['month_jan']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_feb']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_mar']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_apr']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_may']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_jun']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_jul']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_aug']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_sep']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_oct']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_nov']))?'0':'1';
-		$month .= (!isset($new_timeperiod['month_dec']))?'0':'1';
+		$month .= (!isset($new_timeperiod['month_jan']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_feb']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_mar']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_apr']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_may']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_jun']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_jul']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_aug']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_sep']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_oct']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_nov']))? '0':'1';
+		$month .= (!isset($new_timeperiod['month_dec']))? '0':'1';
 
 		if(isset($new_timeperiod['month'])){
 			$month = zbx_num2bitstr($new_timeperiod['month'],true);
